fix : tags에 flex-wrap:wrap 적용

--- a/components/post/Post.module.scss
+++ b/components/post/Post.module.scss
@@ -10,10 +10,12 @@
   font-size: 3rem;
 }
 .description {
+  margin-top: 10px;
   font-size: 1.5rem;
   font-style: italic;
 }
 .date {
+  margin-top: 10px;
   font-size: 1rem;
 }
 .line {
@@ -38,6 +40,7 @@
     color: yellow;
     margin: 20px 0;
     font-size: 2.2rem;
+    text-decoration-line: underline;
   }
   h2 {
     margin: 30px 0;
@@ -58,11 +61,17 @@
   p {
     font-size: 1.2rem;
     line-height: 1.5;
+    margin: 20px 0;
   }
   ul {
+    font-size: 1.2rem;
     list-style-position: inside;
+    line-height: 1.5rem;
   }
   li {
+    font-size: 1.2rem;
+    list-style-position: inside;
+    line-height: 1.5rem;
     text-indent: 15px;
     p {
       display: inline;
